# hkgfinder

./: .gitignore  LICENSE  README.md  hkg.out  my.proteins.faa  proteins.faa  pyproject.toml  test.faa  test.fna
butler/: butler.py
db/: butler.hmm
hkgfinder/: cli.py  hkgfinder.py  hkglib.py  utils.py
src/hkgfinder/: cli.py  config.py  hkglib.py  hmm_search.py  main.py  models.py  validation.py  writers.py
tests/: GCF_000009265.1_ASM926v1_genomic.fna.bz2  GCF_000009265.1_ASM926v1_genomic.fna.gz.fxi  GCF_000009265.1_ASM926v1_genomic.fna.xz  GCF_000009265.1_ASM926v1_genomic.fna.zst  test_butler.py  test_hkgfinder.py  test_writers.py
