[tool.poetry]
name = "hkgfinder"
version = "0.3.0"
description = "find housekeeping genes in prokaryotic (meta)genomic data"
authors = ["Anicet Ebou <anicet.ebou@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Ebedthan/hkgfinder"
repository = "https://github.com/Ebedthan/hkgfinder"
documentation = "https://github.com/Ebedthan/hkgfinder"
keywords = ["bioinformatics"]
classifiers = [
            "Development Status :: 5 - Production/Stable",
            "Intended Audience :: Developers",
            "Intended Audience :: Education",
            "Intended Audience :: Science/Research",
            "Natural Language :: English",
            "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
            "Programming Language :: Python :: 3.8",
            "Programming Language :: Python :: 3.9",
            "Programming Language :: Python :: 3.10",
            "Operating System :: Microsoft :: Windows",
            "Operating System :: POSIX :: Linux",
            "Operating System :: Unix",
            "Topic :: Scientific/Engineering :: Bio-Informatics"
]

[options.package_data]
hkgfinder = "*.hmm"

[tool.poetry.dependencies]
python = "^3.8"
bio = "^1.3.9"
pyfastx = "^0.8.4"
xphyle = "^4.4.2"
pyrodigal = "^2.1.0"
pyhmmer = "^0.8.0"

[tool.poetry.scripts]
hkgfinder = "hkgfinder.hkgfinder:main"

[tool.ruff.lint]
select = ["ALL"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
