[project]
name = "hkgfinder"
version = "0.3.0"
description = "Find housekeeping genes in prokaryotic (meta)genomic data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bio>=1.7.1",
    "pyfastx>=2.2.0",
    "pyhmmer==0.11.0",
    "pyrodigal>=3.6.3.post1",
]

[project.scripts]
hkgfinder = "hkgfinder:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
